<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <DUT Name="DUT_LogowanieBledow_ZdarzenieOpis" Id="{f7ba6a38-77f4-403f-a44d-e9677655cd1b}">
    <Declaration><![CDATA[TYPE DUT_LogowanieBledow_ZdarzenieOpis :
STRUCT
	iIdZdarzenia							: INT;
	sOpis									: STRING;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>